scripts/nullness/original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:8: error: [initialization.field.uninitialized] the default constructor does not initialize field learningStrategy
    StrategyPatternLearningStrategy learningStrategy;
                                    ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:46: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, repertoire
    public Theatre(TheatreDirector director) {
           ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:11: error: [initialization.field.uninitialized] the default constructor does not initialize field lightRecorder
    private LightSensitiveMedium lightRecorder;
                                 ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/Station.java:34: error: [argument] incompatible argument for parameter notification of Station constructor.
        this(name, null);
                   ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:73: error: [initialization.fields.uninitialized] the constructor does not initialize fields: previousStop, nextStop
        public Stop(Station name) {
               ^
5 errors
